<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_round_corner_dailog_check_update"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:background="@drawable/check_update_dialog_bg"
        android:paddingHorizontal="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="21dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_dialog_main_title"
            android:textColor="#fff"
            android:textSize="24dp" />

        <TextView
            android:layout_marginTop="21dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_dialog_sub_title"
            android:textColor="#B3FFFFFF"
            android:textSize="15dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        android:textColor="#626161"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_round_corner_dailog_bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/android_auto_update_dialog_btn_cancel"
            android:textColor="#626161"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/android_auto_update_dialog_btn_download"
            android:textColor="#F85836"
            android:textSize="15dp" />
    </LinearLayout>
</LinearLayout>
