<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="#1E252F"
        android:text="@string/share_to" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="26dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/share_to_wx_friend"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:src="@drawable/image_wechat"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#545C67"
                android:text="@string/share_to_wx_friend"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/share_to_wx_friend_circle"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:src="@drawable/image_wechat_timeline"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#545C67"
                android:text="@string/share_to_wx_friend_circle"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/share_to_qq_friend"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:src="@drawable/image_qq"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#545C67"
                android:text="@string/share_to_qq_friend"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/share_to_qq_zone"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:src="@drawable/image_qzone"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#545C67"
                android:text="@string/share_to_qq_zone"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
