<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_privacy_bg">

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/users_note"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_privacy_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:text="@string/privacy_tips"
        android:textColor="@color/colorGray"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_note"
        app:lineHeight="24dp" />

    <View
        android:visibility="gone"
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorGray"
        app:layout_constraintTop_toBottomOf="@id/tv_privacy_tips" />

    <LinearLayout
        android:id="@+id/layout_to_do"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/line">

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:paddingStart="16dp"
            android:background="@color/colorWhite"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/privacy_exit"
            android:textColor="@color/colorGray"
            android:textSize="16sp" />

        <View
            android:visibility="gone"
            android:layout_width="0.25dp"
            android:layout_height="20dp"
            android:background="@color/colorGray" />

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:paddingEnd="16dp"
            android:background="@color/colorWhite"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/privacy_agree"
            android:textColor="@color/colorOrange"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>